Add changes for sample recording

--- a/src/content/getusermedia/record/index.html
+++ b/src/content/getusermedia/record/index.html
@@ -50,6 +50,28 @@
         <button id="download" disabled>Download</button>
     </div>
 
+<!--    1. Jump-->
+<!--    2. Squat-->
+<!--    3. show one arm-->
+<!--    4. show both hands-->
+<!--    5. lean forward-->
+<!--    6. jumping jack-->
+<!--    7. stand-->
+    <div>
+        <label for="file-name">File Name:</label>
+        <input id="file-name"/>
+        <br>
+    </div>
+    <div>
+        <button id="jumping-jack">Jumping Jack</button>
+        <button id="lean-forward">lean-forward</button>
+        <button id="stand">stand</button>
+        <button id="squat">Squat</button>
+        <button id="jump">Jump</button>
+        <button id="both-arms">Both Arms</button>
+        <button id="one-arm">One Arm</button>
+    </div>
+
     <div>
         <h4>Media Stream Constraints options</h4>
         <p>Echo cancellation: <input type="checkbox" id="echoCancellation"></p>
